# plcPractice

toyc-compiler/: CMakeLists.txt  build.sh  run_tests.sh  setting_README.txt
toyc-compiler/src/: lexer.l  main.cpp  parser.y
toyc-compiler/src/ast/: ast.cpp  ast.hpp
toyc-compiler/src/codegen/: riscv.cpp  riscv.hpp
toyc-compiler/src/sematic/: analyzer.cpp  analyzer.hpp
toyc-compiler/src/utils/: utils.cpp  utils.hpp
toyc-compiler/test_samples/: control_flow.tc  factorial.tc  variables.tc
